# inkflow

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  InkFlow-Technical-Design-Document.md  PROJECT_STRUCTURE.md  README.en.md  README.md  RELEASE_GUIDE.md  SPRINT2_IMPLEMENTATION.md  START.md  electron-builder.yml  index.html  launch_app.py  launch_showrunner.py  launch_showrunner_console.py  launch_ui.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  quick-fix.ts  requirements.txt  run_tests.py  sprint2-test.ps1  tailwind.config.js  verify-and-fix.ps1  vite.config.ts  墨流设计方案.md
.claude/: settings.local.json
00_Config/: book_meta.json
01_Global_Settings/: characters.json  world_lore.json
02_Outlines/: chapter_01_outline.json  chapter_01_scene_1_outline.json  volume_01.md
03_Story_Memory/: full_summaries.md
04_Drafts/: ch01_scene_1.txt  ch01_v1.txt  ch01_v2.txt  ch01_v3.txt
05_Reviews/: ch01_v1_reviews.json  ch01_v2_reviews.json  ch01_v3_reviews.json
06_Examples_Library/: FINAL_LIBRARY_REPORT.md  OPENING_SCENES_REPORT.md  README.md  USAGE_GUIDE.md
code_review/: FeedbackPanel.tsx.txt  GhostTextManager.ts.txt  MainEditor.tsx.txt  editorStore.ts.txt  index.css.txt
desktop/: icon.icns
docs/: architecture.md  evolution_log.md  improvements.md  ralph-loop-iteration-targets.md  requirements.md  spec.md  tasks.md  v2_development_plan.md  系统开发文档.md
electron/: main.cjs  preload.cjs
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
prompts/: author_draft.j2  author_iceberg_v3.j2  author_runtime_contract.md  author_scene_outline.j2  author_system.md  author_system_v3.j2  brainstorming_devil.j2  brainstorming_proposer.j2  compact_summary.j2  editor_review.j2  extractor_editorial_lesson.j2  extractor_user_message.j2  game_script_system.md  reader_ai_tone.j2  (+26 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  file_system.rs  lib.rs  main.rs  mod.rs  token_counter.rs
(+1430 files in other folders)
