[package]
name = "inkflow"
version = "0.1.0"
description = "A modern AI-powered novel writing software"
authors = ["AceSilent"]
license = ""
repository = ""
default-run = "inkflow"

edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["shell-open", "dialog-open", "dialog-save", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
tiktoken-rs = "0.2"
rand = "0.8"
dotenv = "0.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
