[package]
name = "inkflow"
version = "1.0.1"
description = "InkFlow novel authoring studio"
authors = ["InkFlow"]
edition = "2021"

[lib]
name = "inkflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
