[package]
name = "inkflow"
version = "1.0.1"
description = "InkFlow novel authoring studio"
authors = ["InkFlow"]
edition = "2021"

[lib]
name = "inkflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow"] }
